--- a/src/main/resources/inventorybackend.properties
+++ b/src/main/resources/inventorybackend.properties
@@ -1,4 +1,8 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=inventory_management;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=123456
+
 spring.liquibase.enabled=false
 spring.jpa.showSql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
